--- a/package.json
+++ b/package.json
@@ -1,12 +1,48 @@
 {
-  "name": "team_shuffler",
+  "name": "sitescaraptingbot",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "./build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "nodemon ./src/index.ts",
+    "build": "npx prisma generate && npx prisma db push --accept-data-loss && tsc --project ./",
+    "start": "node ./build/index.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@prisma/client": "4.8.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.3",
+    "@types/crypto-js": "^4.1.2",
+    "@types/express": "^4.17.18",
+    "@types/jsonwebtoken": "^8.5.9",
+    "axios": "^1.5.1",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "discord.js": "^14.13.0",
+    "dotenv": "^16.3.1",
+    "ethers": "^6.7.1",
+    "express": "^4.18.2",
+    "faker": "^6.6.6",
+    "input": "^1.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "mixpanel": "^0.18.0",
+    "solid-js": "^1.7.8",
+    "svix": "^1.4.12",
+    "telegraf": "^4.12.2",
+    "telegram": "^2.17.10",
+    "web3": "^4.2.2"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
+    "@types/node": "^18.17.1",
+    "nodemon": "^3.0.1",
+    "prisma": "4.8.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
+  },
+  "description": ""
 }
