added Cron job for the bot

--- a/package.json
+++ b/package.json
@@ -17,19 +17,21 @@
     "@types/crypto-js": "^4.1.2",
     "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/node-cron": "^3.0.11",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
-    "discord.js": "^14.13.0",
+    "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
     "ethers": "^6.7.1",
     "express": "^4.18.2",
-    "faker": "^6.6.6",
+    "faker": "^5.5.3",
     "input": "^1.0.1",
     "jsonwebtoken": "^9.0.0",
     "mixpanel": "^0.18.0",
+    "node-cron": "^3.0.3",
     "solid-js": "^1.7.8",
     "svix": "^1.4.12",
     "telegraf": "^4.12.2",
