--- a/package.json
+++ b/package.json
@@ -1,51 +1,59 @@
 {
-  "name": "sitescaraptingbot",
-  "version": "1.0.0",
-  "main": "./build/index.js",
-  "scripts": {
-    "serve": "nodemon ./src/index.ts",
-    "build": "tsc --project ./",
-    "start": "node ./build/index.js",
-    "test": "echo \"No tests specified\" && exit 0"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@prisma/client": "4.8.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/body-parser": "^1.19.3",
-    "@types/crypto-js": "^4.1.2",
-    "@types/express": "^4.17.18",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/node-cron": "^3.0.11",
-    "axios": "^1.5.1",
-    "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.1.1",
-    "discord.js": "^14.12.1",
-    "dotenv": "^16.3.1",
-    "ethers": "^6.7.1",
-    "express": "^4.18.2",
-    "faker": "^5.5.3",
-    "input": "^1.0.1",
-    "jsonwebtoken": "^9.0.0",
-    "mixpanel": "^0.18.0",
-    "node-cron": "^3.0.3",
-    "solid-js": "^1.7.8",
-    "svix": "^1.4.12",
-    "telegraf": "^4.12.2",
-    "telegram": "^2.17.10",
-    "web3": "^4.2.2"
-  },
-  "devDependencies": {
-    "@faker-js/faker": "^8.3.1",
-    "@types/node": "^18.19.20",
-    "nodemon": "^3.0.1",
-    "prisma": "4.8.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
-  },
-  "description": ""
-}
+      "name": "sitescaraptingbot",
+      "version": "1.0.0",
+      "main": "./build/index.js",
+      "scripts": {
+        "serve": "nodemon ./src/index.ts",
+        "build": "tsc --project ./",
+        "start": "node ./build/index.js",
+        "test": "echo \"No tests specified\" && exit 0"
+      },
+      "keywords": [],
+      "author": "",
+      "license": "ISC",
+      "dependencies": {
+        "@prisma/client": "4.8.0",
+        "@types/bcrypt": "^5.0.0",
+        "@types/body-parser": "^1.19.3",
+        "@types/crypto-js": "^4.1.2",
+        "@types/express": "^4.17.18",
+        "@types/jsonwebtoken": "^8.5.9",
+        "@types/node-cron": "^3.0.11",
+        "axios": "^1.7.4",
+        "bcrypt": "^5.1.0",
+        "body-parser": "^1.20.3",
+        "cors": "^2.8.5",
+        "crypto-js": "^4.1.1",
+        "discord.js": "^14.12.1",
+        "dotenv": "^16.3.1",
+        "ethers": "^6.7.1",
+        "express": "^4.19.2",
+        "faker": "^5.5.3",
+        "input": "^1.0.1",
+        "jsonwebtoken": "^9.0.0",
+        "mixpanel": "^0.18.0",
+        "node-cron": "^3.0.3",
+        "punycode": "^2.3.1",
+        "solid-js": "^1.7.8",
+        "svix": "^1.4.12",
+        "telegraf": "^4.12.2",
+        "telegram": "^2.17.10",
+        "web3": "^4.2.2",
+        "follow-redirects": "^1.15.6",
+        "serve-static": "^1.16.0",
+        "send": "^0.19.0",
+        "store2": "^2.14.4",
+        "tar": "^6.2.1",
+        "undici": "^5.28.4",
+        "ws": "^8.17.1"
+      },
+      "devDependencies": {
+        "@faker-js/faker": "^8.3.1",
+        "@types/node": "^18.19.20",
+        "nodemon": "^3.0.1",
+        "prisma": "4.8.0",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.6"
+      },
+      "description": ""
+    }
